--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="container">
                 <h1 class="fade-up">DMYA CCF 2026 <small></small></h1>
                 <div class="countdown-box" id="countdown"> <span>02</span> <span>15</span> <span>37</span> <span>22</span> </div>
-                <p style="margin-top:20px; font-size:1.5rem;">পরবর্তী ম্যাচ: বঙ্গবন্ধু একাদশ 🆚 সিলেট সিটি</p>
+                <p style="margin-top:20px; font-size:1.5rem;">পরবর্তী ম্যাচ:FC RANGERS VS GHURABA</p>
             </div>
         </div>
 
