--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
             <div class="container">
                 <h1 class="fade-up">DMYA CCF 2026 <small></small></h1>
                 <div class="countdown-box" id="countdown"> <span>02</span> <span>15</span> <span>37</span> <span>22</span> </div>
-                <p style="margin-top:20px; font-size:1.5rem;">পরবর্তী ম্যাচ:FC RANGERS VS GHURABA</p>
+                <p style="margin-top:20px; font-size:1.5rem;">NEXT MATCH:FC RANGERS VS GHURABA</p>
             </div>
         </div>
 
@@ -324,7 +324,7 @@
         <div id="teamModal" class="modal">
             <div class="modal-content" id="teamModalBody">
                 <h2 id="modalTeamName">Team name</h2>
-                <p>Coach: <span id="modalCoach"></span></p>
+                
                 <p>Captain: <span id="modalCaptain"></span></p>
                 <p>Matches: <span id="modalMatches"></span> | Wins: <span id="modalWins"></span> | Losses: <span id="modalLosses"></span> | Points: <span id="modalPts"></span></p>
                 <button onclick="closeModal()" style="background:var(--green); color:white; border:none; padding:10px 30px; border-radius:50px;">Close</button>
