--- a/index.html
+++ b/index.html
@@ -404,8 +404,8 @@
     <footer id="contact" style="background:var(--green); color:white; padding:50px 0; margin-top:80px;">
         <div class="container" style="display:flex; flex-wrap:wrap; gap:40px; justify-content:space-between;">
             <div>
-                <h3>Premier Cup · গোলমাল লিগ</h3>
-                <p>📍 সিলেট স্টেডিয়াম, বাংলাদেশ<br>📞 +880 17xx xxxxxx<br>✉️ info@premiercup.com</p>
+                <h3>DMYA CCF 2026</h3>
+                <p>📍 HAMSAYAPUR<br>📞 +880 1410553626<br>✉️ info@premiercup.com</p>
             </div>
             <div class="social">
                 <a href="#"><i class="fab fa-facebook"></i></a>
@@ -420,10 +420,11 @@
     <script>
         // ---------- GLOBAL DATA (demo mode, saved in localStorage) ----------
         let teams = JSON.parse(localStorage.getItem('premierTeams')) || [
-            { id:1,name:'ঢাকা ইউনাইটেড',coach:'সাইফুল',captain:'জামাল',matches:4,wins:2,draws:1,losses:1,gd:2,pts:7 },
-            { id:2,name:'চট্টগ্রাম',coach:'হাসান',captain:'রিয়াজ',matches:4,wins:1,draws:2,losses:1,gd:0,pts:5 },
-            { id:3,name:'সিলেট সিটি',coach:'মনোয়ার',captain:'কায়েস',matches:3,wins:3,draws:0,losses:0,gd:5,pts:9 },
-            { id:4,name:'রাজশাহী',coach:'রবিন',captain:'রানা',matches:4,wins:0,draws:3,losses:1,gd:-2,pts:3 },
+            { id:1,name:'FC RANGERS',coach:'X',captain:'KHAIRUL',matches:0,wins:0,draws:0,losses:0,gd:0,pts:0 },
+            { id:2,name:'GHURABA',coach:'X',captain:'NAFI',matches:0,wins:0,draws:0,losses:0,gd:0,pts:0 },
+            { id:3,name:'CIRCLE DE MAJIME',coach:'X',captain:'ASHISH',matches:0,wins:0,draws:0,losses:0,gd:0,pts:0 },
+            { id:4,name:'TEAM X',coach:'X',captain:'TALHA',matches:0,wins:0,draws:0,losses:0,gd:0,pts:0 },
+            {id:4,name:'RJ UNITED',coach:'X',captain:'RJ RAKIB',matches:0,wins:0,draws:0,losses:0,gd:0,pts:0 },
         ];
 
         let players = JSON.parse(localStorage.getItem('premierPlayers')) || [
